# maestro

./: README  diff.sh
examples/: example_1.py  example_2.py  simple.mae
src/: CMakeLists.txt  CMakeMacros.txt  fft.cc  fft.h  instrument.h  jack_pitch_modulator.cc  maestro_lex.l  maestro_yacc.y  main.cc  midi.cc  midi.h  note.h  patch_instrument.cc  patch_instrument.h  py_maestro.py  renderer.cc  renderer.h  segment.cc  segment.h  sound.cc  sound.h  util-inl.h  yystype.h
